# Reversi

./: asset-manifest.json  build-and-install.sh  index.html
phase-4.1/: Cargo.toml  README.md  error.txt  log.txt  out.txt  rust-toolchain.toml
phase-4.1/src/: database.rs  eval.rs  eval_wasm.rs  extract_weights.py  lib.rs  main.rs  othello_model_pattern_alt.onnx  play.rs  solver.rs  test_main.rs  test_wasm.rs
reversi-web/: article.md  package-lock.json  package.json
reversi-web/public/: index.html
reversi-web/src/: App.css  App.js  GameEngine.js  log.txt
static/css/: main.f4a22d2c.css  main.f4a22d2c.css.map
static/js/: 959.2479a487.chunk.js  959.2479a487.chunk.js.map  main.2616f0d1.js  main.2616f0d1.js.map
static/media/: fl_reversi_rs_bg.bcbf39d706ec67c99e17.wasm
