[package]
name = "fl-reversi-rs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2.21"
thiserror = "1.0.61"
rand = "0.8.5"
itertools = "0.14.0"
chrono = { version = "0.4", features = ["serde"] }
tract-onnx = "0.21.0"
ndarray = "0.15.4"
hashbrown = "0.14"

[profile.release]
target-cpu = "native"
lto = true
codegen-units = 1

[profile.dev]
target-cpu = "native"