[package]
name = "fl-reversi-rs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2.21"
thiserror = "1.0.61"
rand = "0.8.5"
itertools = "0.14.0"
chrono = { version = "0.4", features = ["serde"] }
ndarray = "0.15.4"
hashbrown = "0.14"
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"

# WebAssembly以外の環境でのみ有効
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tract-onnx = "0.21.0"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "test_main"
path = "src/test_main.rs"

[profile.release]
lto = true
codegen-units = 1
